force-app/main/default/objects/Opportunity/fields/Payment_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Payment_Client_Secret__c</fullName>
    <label>Payment Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>