force-app/main/default/objects/Opportunity/fields/Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Details__c</fullName>
    <description>Payment Processing Details</description>
    <label>Payment Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>