force-app/main/default/objects/Opportunity/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Used for bulk upload process</description>
    <label>Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>