force-app/main/default/objects/Opportunity/fields/PaymentIntentId__c.field-meta.xml
<CustomField>
    <fullName>PaymentIntentId__c</fullName>
    <label>PaymentIntentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>