force-app/main/default/objects/Opportunity/fields/Precluded_Gift_Aid_Value__c.field-meta.xml
<CustomField>
    <fullName>Precluded_Gift_Aid_Value__c</fullName>
    <label>Precluded Gift Aid Value</label>
    <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>npe01__OppPayment__c.npe01__Paid__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>npe01__OppPayment__c.Gift_Aid_Precluded__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>