force-app/main/default/objects/Opportunity/fields/Recurring_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Payment_Method__c</fullName>
    <formula>Text(npe03__Recurring_Donation__r.npsp__PaymentMethod__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Payment Method</label>
    <type>Text</type>
</CustomField>