force-app/main/default/objects/Opportunity/fields/Recurring_Setup__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Setup__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of recurring donations setup for this opportunity</description>
    <label>Recurring Setup</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>