force-app/main/default/objects/Opportunity/fields/Recurring_Type__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Type__c</fullName>
    <defaultValue>&apos;Open&apos;</defaultValue>
    <label>Recurring Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>