force-app/main/default/objects/Opportunity/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <label>Refund Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate Payment</fullName>
            </value>
            <value>
                <fullName>Entered by Mistake</fullName>
            </value>
            <value>
                <fullName>Facebook - Refund</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>JustGiving - Refund</fullName>
            </value>
            <value>
                <fullName>Request By Donor</fullName>
                <default>true</default>
                <label>Request By Donor</label>
            </value>
            <value>
                <fullName>Returned Cheque</fullName>
            </value>
            <value>
                <fullName>Stripe - Dispute</fullName>
            </value>
            <value>
                <fullName>Website error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Supporter Request</fullName>
                <isActive>false</isActive>
                <label>Supporter Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>