force-app/main/default/objects/Opportunity/fields/Regional_Office__c.field-meta.xml
<CustomField>
    <fullName>Regional_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Regional Office</value>
        </filterItems>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Account.ParentId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Donations (Regional Office)</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>