force-app/main/default/objects/Opportunity/fields/Row_Index__c.field-meta.xml
<CustomField>
    <fullName>Row_Index__c</fullName>
    <description>Used for bulk upload</description>
    <label>Row Index</label>
    <length>10</length>
    <type>Text</type>
</CustomField>