force-app/main/default/objects/Opportunity/fields/Skip_Process_Automation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Process_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used by bulk upload to stop process automation</description>
    <label>Skip Process Automation</label>
    <type>Checkbox</type>
</CustomField>