force-app/main/default/objects/Opportunity/fields/Source_Donation_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Donation_Transaction_ID__c</fullName>
    <formula>npe03__Recurring_Donation__r.Source_Donation_Transaction_Id__c</formula>
    <label>Source Donation Transaction ID</label>
    <type>Text</type>
</CustomField>