force-app/main/default/objects/Opportunity/fields/Source_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Source_Opportunity__c</fullName>
    <description>Opportunity (Source) - The original donation opportunity</description>
    <formula>HYPERLINK(npe03__Recurring_Donation__r.Opportunity__c,npe03__Recurring_Donation__r.Opportunity__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Original Donation Opportunity</inlineHelpText>
    <label>Source Opportunity</label>
    <type>Text</type>
</CustomField>