force-app/main/default/objects/Opportunity/fields/Stipulation_Type__c.field-meta.xml
<CustomField>
    <fullName>Stipulation_Type__c</fullName>
    <description>Used by Bulk Process</description>
    <label>Stipulation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>