force-app/main/default/objects/Opportunity/fields/Total_Amount_Expected__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Expected__c</fullName>
    <label>Total Amount Expected</label>
    <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
    <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>