force-app/main/default/objects/Opportunity/fields/Total_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Donation_Amount__c</fullName>
    <formula>If((Text(Donation_Type__c) =&apos;10N&apos; || Text(Donation_Type__c) =&apos;30N&apos; || Text(Donation_Type__c) =&apos;10D&apos;),Total_Amount_Expected__c,Amount)</formula>
    <label>Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>