force-app/main/default/objects/Opportunity/fields/Total_Refund__c.field-meta.xml
<CustomField>
    <fullName>Total_Refund__c</fullName>
    <label>Total Refund</label>
    <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>npe01__OppPayment__c.npsp__Type__c</field>
        <operation>equals</operation>
        <value>Refund</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>npe01__OppPayment__c.npe01__Paid__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>