force-app/main/default/objects/Opportunity/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Website Transaction ID (GUID)</description>
    <externalId>true</externalId>
    <label>Transaction Id</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>