force-app/main/default/objects/Opportunity/fields/Transaction_Source__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Source__c</fullName>
    <description>Used by bulk upload</description>
    <label>Transaction Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>