force-app/main/default/objects/Opportunity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>if(Recurring_Setup__c =0,&apos;Donation&apos;,&apos;Payment Plan - Source&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Setup Type</label>
    <type>Text</type>
</CustomField>