force-app/main/default/objects/Opportunity/fields/Website_Code__c.field-meta.xml
<CustomField>
    <fullName>Website_Code__c</fullName>
    <label>Website Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>