force-app/main/default/objects/Opportunity/fields/XFactor_1__c.field-meta.xml
<CustomField>
    <fullName>XFactor_1__c</fullName>
    <inlineHelpText>Multiple Donation on 27th Night</inlineHelpText>
    <label>XFactor_1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>