force-app/main/default/objects/Opportunity/fields/XFactor_2__c.field-meta.xml
<CustomField>
    <fullName>XFactor_2__c</fullName>
    <description>Xfactor_2 is Used for Multiple Odd Nights (10N,30N)</description>
    <inlineHelpText>Multiple Donation on Odd Nights</inlineHelpText>
    <label>XFactor_2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>