force-app/main/default/objects/Opportunity/recordTypes/Refund.recordType-meta.xml
<RecordType>
    <fullName>Refund</fullName>
    <active>true</active>
    <businessProcess>Refund</businessProcess>
    <description>Refund Donation</description>
    <label>Refund</label>
</RecordType>