force-app/main/default/objects/Opportunity/validationRules/Cannot_Class_Until_Finance_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Class_Until_Finance_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(StageName),  ISPICKVAL(StageName,&apos;Refunded&apos;), NOT(ISPICKVAL(PRIORVALUE(StageName),&apos;Finance Approval&apos;)),  RecordType.DeveloperName == &apos;Refund&apos; 
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Record cannot be closed before Finance Approval.</errorMessage>
</ValidationRule>