force-app/main/default/objects/Opportunity/validationRules/No_Change_Once_Donation_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Change_Once_Donation_Closed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Not(CONTAINS($User.Alias, &apos;inte&apos;)),Not($Permission.Allow_Changes_on_Won_Donations),PRIORVALUE(IsWon), OR(ISCHANGED(Donation_Type__c),ISCHANGED(StageName),ISCHANGED(Effective_Date__c),ISCHANGED(CloseDate),ISCHANGED(Amount), ISCHANGED(Recurring_Type__c),ISCHANGED(Number_of_Installments__c)))</errorConditionFormula>
    <errorMessage>No Changes are allowed, once the donation is Closed</errorMessage>
</ValidationRule>