force-app/main/default/objects/Opportunity/validationRules/Online_Medium_is_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Online_Medium_is_Not_Allowed</fullName>
    <active>true</active>
    <description>To ensure integrity of attribution, only Users who are assigned to the permission set &quot;Create_Donation_with_Online_Medium&quot; can edit the Medium on a Donation where Medium = Online.</description>
    <errorConditionFormula>AND(
     ISPICKVAL(PRIORVALUE(Medium__c),&apos;Online&apos;),
     ISCHANGED(Medium__c),
     Not($Permission.Create_Donation_with_Online_Medium)
    )</errorConditionFormula>
    <errorDisplayField>Medium__c</errorDisplayField>
    <errorMessage>You cannot change the Medium of this Donation because it was made online. If you have a special reason to do so, please contact your Salesforce Administrator</errorMessage>
</ValidationRule>