force-app/main/default/objects/Opportunity/validationRules/Throw_an_error.validationRule-meta.xml
<ValidationRule>
    <fullName>Throw_an_error</fullName>
    <active>false</active>
    <errorConditionFormula>Text( StageName ) == &apos;In Payment Processing&apos;</errorConditionFormula>
    <errorMessage>Thrown an error in batch process</errorMessage>
</ValidationRule>