force-app/main/default/objects/Opportunity/validationRules/Validate_Donation_Close_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Donation_Close_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Not(CONTAINS($User.Alias, &apos;inte&apos;)),Not($Permission.Allow_Past_Date_Donations),Not(IsClosed), OR(ISNEW(),ISCHANGED(CloseDate)),CloseDate&lt;Today())</errorConditionFormula>
    <errorMessage>Donation Close Date must be Today or future date</errorMessage>
</ValidationRule>