force-app/main/default/objects/Opportunity/validationRules/Validate_Effective_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Effective_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Effective_Date__c &lt;=TODAY(),OR(ISNEW(),ISCHANGED(Effective_Date__c)))</errorConditionFormula>
    <errorMessage>Effective Date Should be a Future Date</errorMessage>
</ValidationRule>