force-app/main/default/objects/Opportunity/listViews/All_Donations.listView-meta.xml
<ListView>
    <fullName>All_Donations</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>In Payment Processing</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Regional_Office_Code__c</field>
        <operation>equals</operation>
        <value>FR</value>
    </filters>
    <label>In Payment Processing</label>
    <sharedTo>
        <role>Global_IT_Admin</role>
        <roleAndSubordinates>CEO_France</roleAndSubordinates>
    </sharedTo>
</ListView>