force-app/main/default/objects/Opportunity/listViews/AllOpportunities_w_Transaction_ID.listView-meta.xml
<ListView>
    <fullName>AllOpportunities_w_Transaction_ID</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Transaction_Id__c</columns>
    <columns>npe03__Recurring_Donation__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transaction_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Opportunities w Transaction ID</label>
</ListView>